[package]
name = "qbdotsnap"
version = "0.2.2"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = "0.4"
walkdir = "2"
similar = "3.1.0"
anyhow = "1"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
